class OperatingSystem:
    def __init__(self, name: str, version: str):
        self.name = name
        self.version = version